rewording the tool instructions

--- a/ActivityMerger/templates/upload.html
+++ b/ActivityMerger/templates/upload.html
@@ -81,13 +81,12 @@
         <div class="col-xs-12">
           <div class="panel panel-default">
             <div class="panel-body">
-    
               <h3 class="heading-in-panel">Using the IATI Activity Merge Tool</h3>
-              <p> You can upload multiple IATI Activity files using the file selection tool</a>.</p>
-    
-              <p>Upon clicking generate, your files will be uploaded, merged, and them immediately returned to you in a new document (named 'merged.xml)'</p>
-              <p>Your data is immediately following generation of the new file. And the file can only be downloaded once before it is deleted from the server.</p>
-              <p>You can validate the generate file by visiting <a href="https://iati.cove.opendataservices.coop/">IATI CoVE</a>.</p>
+              <p>You can upload multiple IATI Activity files using the file selection tool.</p>
+              <p>Upon clicking generate, your files will be uploaded and merged.</p>
+              <p>Once this process is complete a download button will become visible.</p>
+              <p>Your data is stored for 7 days, after which all files will be deleted.</p>
+              <p>You can validate the generated file by visiting <a href="https://iati.cove.opendataservices.coop/">IATI CoVE</a>.</p>
             </div>
           </div>
         </div>
