--- a/ActivityMerger/templates/upload.html
+++ b/ActivityMerger/templates/upload.html
@@ -14,18 +14,17 @@
         <p class="lead">Merge multiple IATI activity files</p>
     </div>
 
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
+    <div class="panel-group" id="accordionInput" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordion"
-                data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordionInput"
+                data-target="#collapseOutput" aria-expanded="true" aria-controls="collapseOutput">
                 <h4 class="panel-title">
                     <a class="accordion-toggle">
                         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>Upload
                     </a>
                 </h4>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOutput" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     <form method=post enctype=multipart/form-data>
                         <div class="form-group">
@@ -49,31 +48,6 @@
                 </div>
             </div>
         </div>
-
-        {% if filename %}
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingTwo" data-toggle="collapse" data-parent="#accordion"
-                data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                <h4 class="panel-title">
-                    <a class="accordion-toggle">
-                        <span class="glyphicon glyphicon-download" aria-hidden="true"></span>Download
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">
-                    <div><label>The merged file was generated at: {{ timestamp }}</label></div>
-                    <div><label>This is composed of {{ noFiles }} activity files.</label></div>
-                    <div class="form-group">
-                        <a href="download/{{ filename }}"><button class="btn btn-primary">
-                            Download
-                        </button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endif %}
-
     </div>
 </div>
 
