--- a/ActivityMerger/templates/download.html
+++ b/ActivityMerger/templates/download.html
@@ -21,7 +21,7 @@
             <div id="collapseOutput" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     <div><label>The merged file was generated at: {{ timestamp }}</label></div>
-                    <div><label>"It is composed of {{ session['files']|length }} activity files and it contains {{ session['totalActivities'] }} activities (XML elements)."</label></div>
+                    <div><label>It is composed of {{ session['files']|length }} activity files and it contains {{ session['totalActivities'] }} activities (XML elements).</label></div>
                     <div class="w-100">
                         <a href="download/{{ filename }}"><button class="btn btn-primary pull-left">
                                 Download
