--- a/ActivityMerger/templates/upload.html
+++ b/ActivityMerger/templates/upload.html
@@ -23,13 +23,13 @@
                     <form method=post enctype=multipart/form-data>
                         <div class="form-group">
                             <label class="control-label"
-                                for="id_original_file">Upload multiple
-                                Activity Files
+                                for="id_original_file">
+                                Upload multiple Activity Files
                                 (.xml)
                             </label>
                             <div class="row bootstrap3-multi-input">
                                 <div class="col-xs-12"><input class="" id="id_original_files" 
-                                    type=file name=files[] multiple>
+                                    type=file name=files[] multiple onchange="handleFiles(this.files)">
                                 </div>
                             </div>
                         </div>
@@ -50,20 +50,50 @@
             </div>
         </div>
     </div>
+    <div class="panel-group" id="accordionInput" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-parent="#accordionInput"
+                data-target="#collapseOutput" aria-expanded="true" aria-controls="collapseOutput">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle">
+                        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
+                        Selected Files
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseFiles" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+                <div>
+                    <ul class="list-group no-margin-bottom" id="dynamic-files">
+                    </ul>
+                    <div class="panel-footer">The files that you select will be displayed above.</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row" id="how-to-use">
-        <div class="col-xs-12">
-          <div class="panel panel-default">
+    <div class="col-xs-12">
+        <div class="panel panel-default">
             <div class="panel-body">
-              <h3 class="heading-in-panel">Using the IATI Activity Merge Tool</h3>
-              <p>You can upload multiple IATI Activity files using the file selection tool.</p>
-              <p>Upon clicking generate, your files will be uploaded and merged.</p>
-              <p>Once this process is complete a download button will become visible.</p>
-              <p>Your data is stored for 7 days, after which all files will be deleted.</p>
-              <p>You can validate the generated file by visiting <a href="https://iati.cove.opendataservices.coop/">IATI CoVE</a>.</p>
+                <h3 class="heading-in-panel">Using the IATI Activity Merge Tool</h3>
+                <p>You can upload multiple IATI Activity files using the file selection tool.</p>
+                <p>Upon clicking generate, your files will be uploaded and merged.</p>
+                <p>Once this process is complete a download button will become visible.</p>
+                <p>Your data is stored for 7 days, after which all files will be deleted.</p>
+                <p>You can validate the generated file by visiting <a href="https://iati.cove.opendataservices.coop/">IATI CoVE</a>.</p>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
+</div>
+
+<script>
+    function handleFiles(files) {
+        fileList = ""
+        for (file of files) {
+            fileList += '<li class="list-group-item">'+file.name+'</li>'
+        }
+        document.getElementById("dynamic-files").innerHTML = fileList
+    }
+</script>
 {% endblock %}
