--- a/ActivityMerger/templates/partials/_navigation.html
+++ b/ActivityMerger/templates/partials/_navigation.html
@@ -7,13 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ url_for('upload_file') }}">Data Quality Tester</a>
+      <a class="navbar-brand" href="{{ url_for('upload_file') }}">IATI Merge Tool</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li
-{%- if request.url_rule.endpoint == 'upload_file' %} class="active"{% endif -%}
-        ><a href="{{ url_for('upload_file') }}">Merge</a></li>
+        {%- if request.url_rule.endpoint == 'upload_file' %} class="active"{% endif -%}
+                ><a href="{{ url_for('upload_file') }}">Home</a></li>
+        <li class="inactive"><a href="https://dataqualitytester.publishwhatyoufund.org">Data Quality Tester</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="pwyf-logo">
