retention: Add cli tool for flushing old data

--- a/config.py.tmpl
+++ b/config.py.tmpl
@@ -2,3 +2,4 @@ class Config(object):
     SECRET_KEY = 'super top secret key'
     UPLOAD_FOLDER='input'
     OUTPUT_FOLDER='output'
+    RETENTION_DAYS = 7
